--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-animated-weather": "^4.0.1",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
+    "react-skycons": "^0.8.8",
+    "react-skycons-extended": "^2.0.2",
     "weather-icons": "^1.3.2",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "18.x"
   }
+
+ 
 }
